--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Andy Roberts <andy.roberts@springernature.com> (http://springernature.com)",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.34.0"
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4"
   }
 }
